fix: font sizes, background videos, alignment

--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -411,3 +411,18 @@ footer {
     }
 
 }
+
+.wrapper {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+
+    .header,
+    .footer {
+        position: fixed;
+    }
+
+    main {
+        height: 100%;
+    }
+}
