--- a/src/components/workTitle/workTitle.module.scss
+++ b/src/components/workTitle/workTitle.module.scss
@@ -83,7 +83,7 @@
         // justify-content: space-between;
 
         width     : 100%;
-        font-size : $fontSize960M;
+        // font-size : $fontSize960M;
         transition: font-size 0.5s ease;
 
         * {
@@ -111,15 +111,15 @@
     }
 }
 
-@media screen and (min-width: 1400px) {
+// @media screen and (min-width: 1400px) {
 
-    .work-title, .animated {
-        font-size: $fontSize1400M;
-    }
-}
+//     .work-title, .animated {
+//         font-size: $fontSize1400M;
+//     }
+// }
 
-@media screen and (min-width: 2000px) {
-    .work-title, .animated {
-        font-size: $fontSize2000M;
-    }
-}
+// @media screen and (min-width: 2000px) {
+//     .work-title, .animated {
+//         font-size: $fontSize2000M;
+//     }
+// }
